1.74.0/libs/logic/test/compile-fail/CVS/Entries.Extra
/implicit.cpp////*////
/implicit_int_1.cpp////*////
/implicit_int_2.cpp////*////
/implicit_int_3.cpp////*////
/operator_less_1.cpp////*////
/operator_less_2.cpp////*////
